# opnsense-rs

./: Cargo.toml  README.md
src/: main.rs  model.rs  model.txt
