[package]
name = "opnsense-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "string"] }
nom = "8.0"
reqwest = { version = "0.12", features = ["blocking", "json"] }
rpassword = "7.3"
rust-ini = "0.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
